fix: adjust spacing between sections and content

--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,7 @@ li {
   justify-content: flex-start;
   width: 100%;
   height: 100%;
-  margin-bottom: 48px;
+  margin-bottom: 58px;
 }
 
 .barra-navegacao {
@@ -221,7 +221,7 @@ li {
   justify-content: center;
   align-content: center;
   column-gap: 36px;
-  margin-top: 48px;
+  margin-top: 30px;
 }
 
 .ability-card {
@@ -292,7 +292,7 @@ li {
   justify-content: center;
   align-content: center;
   column-gap: 36px;
-  margin-top: 48px;
+  margin-top: 32px;
 }
 
 .section-portfolio-card {
